--- a/util/index.html
+++ b/util/index.html
@@ -32,7 +32,7 @@
         <main>
             <div class="row ">
                 <div class="col s12 m12 valign-wrapper">
-                    <div class="card blue darken-1 ">
+                   {{team}} <!-- <div class="card blue darken-1 ">
                         <div class="card-content Black-text">
                             <span class="card-title">Name</span><br>
                         </div>
@@ -49,7 +49,7 @@
                             </p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </main>
 
     <!--Scripts Go Here-->
