--- a/output/team.html
+++ b/output/team.html
@@ -18,9 +18,21 @@
         <h1 class="card-title">Sam</h1>
         <h1 class="card-title">Intern</h1>
             <ul class="list-group">
-                <li class="list-group-item">ID: 3455</li>
-                <li class="list-group-item"><a href="mailto:leag@sam.com">leag@sam.com</a></li>
-                <li class="list-group-item">School: berkley</li>
+                <li class="list-group-item">ID: 1235</li>
+                <li class="list-group-item"><a href="mailto:sam@sam.com">sam@sam.com</a></li>
+                <li class="list-group-item">School: Chicago University</li>
+            </ul>
+      </div>
+    </div>
+      ,
+      <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h1 class="card-title">Keekee</h1>
+        <h1 class="card-title">Intern</h1>
+            <ul class="list-group">
+                <li class="list-group-item">ID: 23432</li>
+                <li class="list-group-item"><a href="mailto:keekee@keekee.com">keekee@keekee.com</a></li>
+                <li class="list-group-item">School: Oxford University</li>
             </ul>
       </div>
     </div>
@@ -30,9 +42,33 @@
             <h1 class="card-title">Lea</h1>
             <h1 class="card-title">Manager</h1>
                 <ul class="list-group">
-                    <li class="list-group-item">ID: 2345</li>
+                    <li class="list-group-item">ID: 12345</li>
                     <li class="list-group-item">Email:<a href="mailto:leag@lea.com">leag@lea.com</a></li>
                     <li class="list-group-item">Office Number: undefined</li>
+                </ul>
+          </div>
+        </div>
+          ,
+          <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h1 class="card-title">Mikah</h1>
+            <h1 class="card-title">Manager</h1>
+                <ul class="list-group">
+                    <li class="list-group-item">ID: 43212</li>
+                    <li class="list-group-item">Email:<a href="mailto:mikah@mikah.com">mikah@mikah.com</a></li>
+                    <li class="list-group-item">Office Number: undefined</li>
+                </ul>
+          </div>
+        </div>
+          
+          <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h1 class="card-title">Jeff</h1>
+            <h1 class="card-title">Engineer</h1>
+                <ul class="list-group">
+                    <li class="list-group-item">ID: 23456</li>
+                    <li class="list-group-item">Email:<a href="mailto:jeff@jeff.com">jeff@jeff.com</a></li>
+                    <li class="list-group-item">Github: Jeff Jeffery</li>
                 </ul>
           </div>
         </div>
