--- a/util/index.html
+++ b/util/index.html
@@ -15,9 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/util/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>My Team</title>
-    <link rel="fav icon" type="image/png" href="/links/Platters and Pantries">
+    <link rel="fav icon" type="image/png" href="">
 </head>
 <header>
 
